2010-05-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* dprsgw.c, ttyreader.c, aprx.c, aprx.h:
	    Experimental DPRS receiver. Studying packet identification from serial
	    port datastream.

	* interface.c, doc/aprx-manual.odt:
	    Effects of 'filter ...'  on different <digipeater>
	    <source> sections are subtly different. See the manual!

	* aprx.h, digipeater.c, doc/aprx-manual.odt, aprx.conf.in,
	  aprx-complex.conf.in:
	    Remodelled the ratelimiting to use 'token bucket filter':
	       ratelimit average burst
	    both values are packets per minute, and both default to 60.

	* digipeater.c, interface.c:
	    Return adjunk filters to RF->RF digipeating.
	    They got lost a bit back with Tx-IGate needing
	    them placed a bit differently.

	* man-to-html.sh:
	    groff has changed its -Tascii output a bit, and
	    its own HTML output is horrible...

2010-05-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c:
	    Correct parse of message recipients.
	    Fix from Patrick Domack K3PDK.

2010-05-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* debian/rules, rpm/aprx.spec.in, aprsis.c:
	    Fixes on pthread:ed aprsis implementation.
	    Default packaging for Debian and RPM to use --with-pthread.
	    Now it shows only one "process", and two threads.
	    This makes the program portable to uCLinux, and possibly
	    to Windows.

	* dprsgw.c, aprx.h, ttyreader.c, Makefile.in, interface.c,
	  aprx.8.in, aprx.conf.in, aprx-complex.conf.in:
	    Add basic configuration and infra of DPRS-to-APRS gw.

	* interface.c, igate.c:
	    Comment editing, adding Tx-IGate Rule 4, second half.
	    First half probably exists in igate..

2010-05-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, README, TODO, VERSION:
	    Mark version 1.99, APRX1G

2010-05-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, filter.c:
	    Filtering logic change on 3rd-party digipeating.
